worked on push working code

--- a/CRM/appsettings.json
+++ b/CRM/appsettings.json
@@ -7,5 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "DefaultConnection": "connection string"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-A8PRVNS;Database=CollegeCRM;Integrated Security=True;TrustServerCertificate=True;"
+  }
 }
