--- a/CRM/Properties/launchSettings.json
+++ b/CRM/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:34199",
-      "sslPort": 34110
+      "applicationUrl": "http://localhost:54669",
+      "sslPort": 44382
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "CRM": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      }
     }
   }
 }
