worked on Subject master

--- a/CRM/appsettings.json
+++ b/CRM/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-A8PRVNS;Database=CollegeCRM;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "AppSettings": {
+    "BaseUrl": "https://localhost:44382"
   }
 }
